--- a/src/css/table-cars-section.css
+++ b/src/css/table-cars-section.css
@@ -37,7 +37,7 @@ tbody tr:hover {
     background-color: #e0e0e0;
 }
 
-img {
+.img-admin {
     width: 50px;
     height: 50px;
     object-fit: cover;
