--- a/src/css/carModal.css
+++ b/src/css/carModal.css
@@ -6,21 +6,28 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease;
 }
 
 .modal-content {
     background: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    max-width: 90%;
+    width: 500px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+
+    max-height: 90vh;
+    overflow-y: auto;
+    transition: max-height 0.3s ease-in-out;
+
+    
+    transition: all 0.9s ease-in-out;
 }
 
 .input-group {
-    margin-bottom: 15px;
+    margin: 15px 0;
 }
 
 .input-group label {
@@ -29,36 +36,77 @@
     font-weight: bold;
 }
 
-.input-group input {
+.input-group input[type='text'],
+.input-group input[type='number'] {
     width: 100%;
-    padding: 10px;
+    padding: 8px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
 .modal-actions {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
 }
 
-.action-btn {
-    padding: 10px 15px;
-    background-color: #007bff;
-    color: #fff;
+.action-btn-modal {
+    padding: 10px 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
+    color: #fff;
     cursor: pointer;
 }
 
-.action-btn:hover {
-    background-color: #0056b3;
+.cancel-btn {
+    background-color: #ff4c4c;
 }
 
-.action-btn.cancel-btn {
-    background-color: #dc3545;
+.input-group input[type='file'] {
+    display: none;
 }
 
-.action-btn.cancel-btn:hover {
-    background-color: #c82333;
+.file-label {
+    display: inline-block;
+    padding: 10px 20px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #fff;
+    text-align: center;
+    font-size: 13px;
+}
+
+.file-label:hover {
+    background-color: #d7e6f6;
+}
+
+.preview-container {
+    position: relative;
+    display: inline-block;
+}
+
+.preview-image {
+    width: 100%;
+    height: auto;
+    max-width: 150px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.remove-button {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background: #ff4c4c;
+    border: none;
+    border-radius: 50%;
+    color: white;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
 }
