--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	font-family: 'Raleway', sans-serif;
 	font-size: 14px;
-	color: #6c7279;
+	color: #2d2d3d;
 
 	background: #c7d5f3;
 }
