--- a/src/css/table-cars-section.css
+++ b/src/css/table-cars-section.css
@@ -2,11 +2,12 @@
     font-family: Arial, sans-serif;
     background-color: #aacdff;
     align-items: center;
-    height: 100vh;
+    height: auto;
     width: 80%;
     margin: 20px auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    padding-bottom: 100px;
 }
 
 
@@ -55,7 +56,7 @@ tbody tr:nth-child(even):hover {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    margin-right: 10px;
+    margin: 5px 10px 5px 0;
 }
 
 .action-btn:hover {
