--- a/src/css/carModal.css
+++ b/src/css/carModal.css
@@ -12,12 +12,13 @@
 }
 
 .modal-content {
+    margin: 25px 0;
     background: #acd8ff;
     padding: 20px;
     border-radius: 8px;
     width: 500px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-
+    text-align: center;
     max-height: 90vh;
     overflow-y: auto;
     transition: max-height 0.3s ease-in-out;
@@ -28,6 +29,23 @@
 
 .input-group {
     margin: 15px 0;
+}
+
+.border {
+    border: 1px solid #afafaf;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.block-fields {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+
+.small-input {
+    width: 20%;
 }
 
 .input-group label {
@@ -58,6 +76,19 @@
     border-radius: 4px;
     color: #fff;
     cursor: pointer;
+}
+
+.btn-create {
+    padding: 15px 50px;
+    margin: 50px 0;
+    font-size: 17px;
+}
+
+.btn-content {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    max-width: 310px;
 }
 
 .cancel-btn {
