--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -7,6 +7,7 @@
     font-weight: bold;
     margin-right: 1rem;
     margin-top: 0;
+    transition: all .8s;
 }
 
 .button__admin:hover {
@@ -18,6 +19,6 @@
 }
 
 .button__admin.active {
-    background: #3e6ae1;
+    background: linear-gradient(90deg, rgb(29, 93, 255) 0%, #1ba8ff 100%);
     color: #fff;
 }
