--- a/src/css/car.css
+++ b/src/css/car.css
@@ -28,24 +28,22 @@
 
 .auto--left {
     text-align: center;
-    width: 47%;
+    width: 50%;
     display: flex;
     flex-direction: column;
 }
 .auto-gallery {
+    margin-top: 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-}
-.auto-gallery__item {
-    margin: 30px 80px 0 0;
-    max-width: 275px;
+    gap: 35px;
 }
 
 .auto-item {
     transition: transform 0.5s;
-    width: 110%;
-    margin-left: 30px;
+    width: 100%;
+    max-width: 275px;
     border-radius: 10px;
 }
 .auto-item:hover {
