--- a/src/css/carModal.css
+++ b/src/css/carModal.css
@@ -31,6 +31,38 @@
     margin: 15px 0;
 }
 
+.gallery-input {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.input-group .gallery-label {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    border-radius: 15px;
+    max-width: 28%;
+    width: 28%;
+    cursor: pointer;
+    color: #000;
+    font-size: 19px;
+    padding: 30px;
+    transition: all 1.1s;
+
+    
+}
+
+.gallery-label:hover {
+    color: #fff;
+    background: linear-gradient(90deg, #8783ff 0%, #00ff88 100%);
+    filter: hue-rotate(-50deg);
+    transition: all 1.1s;
+}
+
 .border {
     border: 1px solid #afafaf;
     border-radius: 5px;
@@ -76,6 +108,7 @@
     border-radius: 4px;
     color: #fff;
     cursor: pointer;
+    transition: all .8s ease;
 }
 
 .btn-create {
@@ -92,12 +125,27 @@
 }
 
 .cancel-btn {
-    background-color: #ff4c4c;
+    background: linear-gradient(90deg, #ff1616 0%, #ff0066 100%);
+	transition: all .8s;
+}
+
+.cancel-btn:hover {
+    background: linear-gradient(90deg, #ff0000 0%, #cc00ff 100%);
+	filter: hue-rotate(-50deg);
+}
+
+.edit-btn {
+    background: linear-gradient(90deg, #ff9900 0%, #ff6600 100%);
+	transition: all .8s;
+}
+
+.edit-btn:hover {
+    background: linear-gradient(90deg, #ff6600 0%, #ff5e00 100%);
+	filter: hue-rotate(0deg);
 }
 
 .input-group input[type='file'] {
     display: none;
-    
 }
 
 .file-label {
@@ -124,8 +172,9 @@
     width: 100%;
     height: auto;
     max-width: 150px;
+    max-height: 130px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 .remove-button {
