--- a/src/css/carModal.css
+++ b/src/css/carModal.css
@@ -16,10 +16,12 @@
     background: #acd8ff;
     padding: 20px;
     border-radius: 8px;
-    width: 500px;
+    width: 550px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    height: fit-content;
     max-height: 90vh;
+    min-height: auto;
     overflow-y: auto;
     transition: max-height 0.3s ease-in-out;
 
@@ -33,7 +35,7 @@
 
 .gallery-input {
     display: flex;
-    gap: 10px;
+    gap: 15px;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
@@ -44,13 +46,14 @@
     justify-content: center;
     text-align: center;
     align-items: center;
-    border-radius: 15px;
-    max-width: 28%;
-    width: 28%;
+    border: 1px solid #ccc;
+    border-radius: 25px;
+    max-width: 10%;
+    width: 10%;
     cursor: pointer;
     color: #000;
     font-size: 19px;
-    padding: 30px;
+    padding: 10px;
     transition: all 1.1s;
 
     
@@ -185,8 +188,8 @@
     border: none;
     border-radius: 50%;
     color: white;
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
     cursor: pointer;
     display: flex;
     align-items: center;
