--- a/src/css/index.css
+++ b/src/css/index.css
@@ -566,6 +566,13 @@ h1 {
     	font-size: 16px;
     }
 
+	.container .filter {
+		float: initial;
+		width: 70%;
+		margin: 0 auto;
+		
+	}
+
      /* our-auto */
     .our-auto {
     	margin: 40px 0 ;
@@ -686,6 +693,10 @@ h1 {
 	}
 	.forma .block {
 		width: 70%;
+	}
+
+	.container .filter {
+		align-items: inherit;
 	}
 }
 
