--- a/src/css/form.css
+++ b/src/css/form.css
@@ -33,9 +33,10 @@
     width: 100%;
     margin: 0;
     padding: 0;
-    border: solid 1px #15a0ed;
-    border-radius: 10px;
+    border: 0;
+    border-bottom: solid 1px #15a0ed;
     font-size: 17px;
+    background-color: transparent;
 }
 
 .name {
