--- a/src/css/carModal.css
+++ b/src/css/carModal.css
@@ -91,7 +91,9 @@
 }
 
 .input-group input[type='text'],
-.input-group input[type='number'] {
+.input-group input[type='number'],
+.input-group select 
+{
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
