--- a/src/css/form.css
+++ b/src/css/form.css
@@ -32,7 +32,7 @@
     max-width: 350px;
     width: 100%;
     margin: 0;
-    padding: 0;
+    padding: 10px;
     border: 0;
     border-bottom: solid 1px #15a0ed;
     font-size: 17px;
@@ -55,7 +55,7 @@
     max-width: 635px;
     width: 100%;
     margin: 0;
-    padding: 0;
+    padding-left: 10px;
     border: solid 1px #15a0ed;
     border-radius: 10px;
     font-size: 17px;
@@ -75,7 +75,7 @@
     max-width: 635px;
     width: 100%;
     margin: 0;
-    padding: 0;
+    padding: 10px;
     border: solid 1px #15a0ed;
     border-radius: 10px;
     font-size: 17px;
@@ -90,7 +90,7 @@
     border-radius: 10px;
     color:#324950;
     font-size: 17px;
-    padding: 0;
+    padding: 10px;
     background-color: transparent;
 }
 
